--- a/Hospital/Bin/Hospital.dproj
+++ b/Hospital/Bin/Hospital.dproj
@@ -71,8 +71,8 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <DCC_DcuOutput>C:\Users\Jairo Chava\Documents\GitHub\Quality_Projects\Hospital\Bin\</DCC_DcuOutput>
-        <DCC_ExeOutput>C:\Users\Jairo Chava\Documents\GitHub\Quality_Projects\Hospital\Bin\</DCC_ExeOutput>
+        <DCC_DcuOutput>D:\_Proyectos_programacion\RepositorioGit\Quality_Projects\Hospital\Bin\</DCC_DcuOutput>
+        <DCC_ExeOutput>D:\_Proyectos_programacion\RepositorioGit\Quality_Projects\Hospital\Bin\</DCC_ExeOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
@@ -174,10 +174,8 @@
                     <Source Name="MainSource">Hospital.dpr</Source>
                 </Source>
                 <Excluded_Packages>
-                    <Excluded_Packages Name="$(BDSBIN)\bcboffice2k190.bpl">Embarcadero C++Builder Office 2000 Servers Package</Excluded_Packages>
-                    <Excluded_Packages Name="$(BDSBIN)\bcbofficexp190.bpl">Embarcadero C++Builder Office XP Servers Package</Excluded_Packages>
-                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k190.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
-                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp190.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k220.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp220.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="1">
